--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       const line2 = prompt("Please enter text: ");
       const line3 = prompt("Please enter text: ");
       const line4 = `${line1} ${line2} ${line3}`;
+      console.log(line4);
     </script>
   </body>
 </html>
